--- a/galeria.html
+++ b/galeria.html
@@ -2,8 +2,8 @@
 <html lang="es">
 
 <head>
-  <title>Hasta La Madeja</title>
-  <link rel="shortcut icon" href="img/logo2.png">
+  <title>Hasta La Madeja | Trabajos Artesanales Para Vos | Galeria</title>
+  <link rel="shortcut icon" href="img/logo2.ico" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -14,8 +14,13 @@
     rel="stylesheet">
   <meta charset="UTF-8>">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="viewport"
-    contet="widht=device-widht, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1">
+  <meta name="description" content="Hasta la madeja. Trabajos artesanales para vos. Sección galeria">
+  <meta name="keywords"
+    content="Galeria, Hasta, Hasta La, Hasta La Madeja, Crochet, Amigurumis, Accesorios, Accesorios Para Bebés, Llaveros, Mándalas, Lana, Ovillo, Tejido, Handmade, Artesano, Artesanal, Hecho A Mano, Feria, Muñeco">
+  <meta property="og:type" content="Web site">
+  <meta property="og:title" content="Hasta La Madeja | Trabajos Artesanales Para Vos | Galeria">
+  <meta property="og:url" content="https://juan-cruz-liboreiro-justel.github.io/Hasta-la-madeja/galeria.html">
+  <meta property="og:image" content="https://juan-cruz-liboreiro-justel.github.io/Hasta-la-madeja/img/logo2.png">
 </head>
 
 <body>
@@ -31,7 +36,7 @@
       <div class="collapse navbar-collapse menu" id="navbarNavAltMarkup">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">HOME</a>
+            <a class="nav-link" href="index.html">INICIO</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="galeria.html">GALERIA</a>
@@ -67,152 +72,152 @@
     <section id="galeria" class="container">
       <div class="row">
         <div class="col-lg-4 col-md-6 col-sm-12">
-          <div class="polaroid">
+          <div class="polaroid" data-aos="flip-up" data-aos-duration="2000">
             <img src="img/img1.jpeg" alt="Galeria imagen">
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
-          <div class="polaroid">
+          <div class="polaroid" data-aos="flip-up" data-aos-duration="2000">
             <img src="img/img2.jpeg" alt="Galeria imagen">
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
-          <div class="polaroid">
+          <div class="polaroid" data-aos="flip-up" data-aos-duration="2000">
             <img src="img/img3.png" alt="Galeria imagen">
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
-          <div class="polaroid">
+          <div class="polaroid" data-aos="flip-up" data-aos-duration="2000">
             <img src="img/img4.jpeg" alt="Galeria imagen">
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
-          <div class="polaroid">
+          <div class="polaroid" data-aos="flip-up" data-aos-duration="2000">
             <img src="img/img5.jpeg" alt="Galeria imagen">
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
-          <div class="polaroid">
+          <div class="polaroid" data-aos="flip-up" data-aos-duration="2000">
             <img src="img/img6.jpeg" alt="Galeria imagen">
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
-          <div class="polaroid">
+          <div class="polaroid" data-aos="flip-up" data-aos-duration="2000">
             <img src="img/img7.png" alt="Galeria imagen">
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
-          <div class="polaroid">
+          <div class="polaroid" data-aos="flip-up" data-aos-duration="2000">
             <img src="img/img8.jpeg" alt="Galeria imagen">
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
-          <div class="polaroid">
+          <div class="polaroid" data-aos="flip-up" data-aos-duration="2000">
             <img src="img/img9.jpeg" alt="Galeria imagen">
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
-          <div class="polaroid">
+          <div class="polaroid" data-aos="flip-up" data-aos-duration="2000">
             <img src="img/img10.jpeg" alt="Galeria imagen">
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
-          <div class="polaroid">
+          <div class="polaroid" data-aos="flip-up" data-aos-duration="2000">
             <img src="img/img11.jpeg" alt="Galeria imagen">
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
-          <div class="polaroid">
+          <div class="polaroid" data-aos="flip-up" data-aos-duration="2000">
             <img src="img/img12.jpeg" alt="Galeria imagen">
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
-          <div class="polaroid">
+          <div class="polaroid" data-aos="flip-up" data-aos-duration="2000">
             <img src="img/img13.jpeg" alt="Galeria imagen">
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
-          <div class="polaroid">
+          <div class="polaroid" data-aos="flip-up" data-aos-duration="2000">
             <img src="img/img14.jpeg" alt="Galeria imagen">
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
-          <div class="polaroid">
+          <div class="polaroid" data-aos="flip-up" data-aos-duration="2000">
             <img src="img/img15.jpeg" alt="Galeria imagen">
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
-          <div class="polaroid">
+          <div class="polaroid" data-aos="flip-up" data-aos-duration="2000">
             <img src="img/img16.jpeg" alt="Galeria imagen">
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
-          <div class="polaroid">
+          <div class="polaroid" data-aos="flip-up" data-aos-duration="2000">
             <img src="img/img17.jpeg" alt="Galeria imagen">
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
-          <div class="polaroid">
+          <div class="polaroid" data-aos="flip-up" data-aos-duration="2000">
             <img src="img/img18.jpeg" alt="Galeria imagen">
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
-          <div class="polaroid">
+          <div class="polaroid" data-aos="flip-up" data-aos-duration="2000">
             <img src="img/img19.jpeg" alt="Galeria imagen">
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
-          <div class="polaroid">
+          <div class="polaroid" data-aos="flip-up" data-aos-duration="2000">
             <img src="img/img20.jpeg" alt="Galeria imagen">
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
-          <div class="polaroid">
+          <div class="polaroid" data-aos="flip-up" data-aos-duration="2000">
             <img src="img/img21.jpeg" alt="Galeria imagen">
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
-          <div class="polaroid">
+          <div class="polaroid" data-aos="flip-up" data-aos-duration="2000">
             <img src="img/img22.jpeg" alt="Galeria imagen">
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
-          <div class="polaroid">
+          <div class="polaroid" data-aos="flip-up" data-aos-duration="2000">
             <img src="img/img23.jpeg" alt="Galeria imagen">
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
-          <div class="polaroid">
+          <div class="polaroid" data-aos="flip-up" data-aos-duration="2000">
             <img src="img/img24.jpeg" alt="Galeria imagen">
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
-          <div class="polaroid">
+          <div class="polaroid" data-aos="flip-up" data-aos-duration="2000">
             <img src="img/img25.jpeg" alt="Galeria imagen">
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
-          <div class="polaroid">
+          <div class="polaroid" data-aos="flip-up" data-aos-duration="2000">
             <img src="img/img26.jpeg" alt="Galeria imagen">
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
-          <div class="polaroid">
+          <div class="polaroid" data-aos="flip-up" data-aos-duration="2000">
             <img src="img/img27.jpeg" alt="Galeria imagen">
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
-          <div class="polaroid">
+          <div class="polaroid" data-aos="flip-up" data-aos-duration="2000">
             <img src="img/img28.png" alt="Galeria imagen">
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
-          <div class="polaroid">
+          <div class="polaroid" data-aos="flip-up" data-aos-duration="2000">
             <img src="img/img1.jpeg" alt="Galeria imagen">
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
-          <div class="polaroid">
+          <div class="polaroid" data-aos="flip-up" data-aos-duration="2000">
             <img src="img/img2.jpeg" alt="Galeria imagen">
           </div>
         </div>
@@ -241,8 +246,8 @@
           <p>© Hasta La Madeja 2022. All Rights Reserved.</p>
         </div>
         <div class="col-lg-6 col-sm-12 text-center footer__redes redes">
-          <a href="https://www.instagram.com/hasta.la.madeja/" target="_blank"><img src="img/instagram.png" alt=""
-              Instagram class="instagram icono_footer"></a>
+          <a href="https://www.instagram.com/hasta.la.madeja/" target="_blank"><img src="img/instagram.png"
+              alt="Instagram" class="instagram icono_footer"></a>
           <a href="https://www.tiktok.com/@hasta.la.madeja?lang=es" target="_blank"><img src="img/tiktok.png"
               alt="Tiktok" class="tiktok icono_footer"></a>
           <a href="https://api.whatsapp.com/send/?phone=5491123895860&text&type=phone_numbre&app_absent=0"
