--- a/contacto.html
+++ b/contacto.html
@@ -1,136 +1,156 @@
 <!DOCTYPE html>
-  <html lang="es">
-    <head>
-      <title>Hasta La Madeja</title>
-      <link rel="shortcut icon" href="img/logo2.png">
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-      <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-      <link rel="stylesheet" href="css/style.css">
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Ms+Madi&family=Roboto&display=swap" rel="stylesheet">
-      <meta charset="UTF-8>">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-      <!-- BARRA DE NAVEGACION -->
-      <nav id="home" class="navbar navbar-expand-lg navbar-menu">
-        <div class="container">
-          <a class="navbar-brand" href="index.html"><img src="img/logo2.png" alt="Logo" class="logo"></a>
-          <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse menu" id="navbarNavAltMarkup">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="index.html">HOME</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="galeria.html">GALERIA</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="nosotros.html">NOSOTROS</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contacto.html">CONTACTO</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="clientes.html">CLIENTES</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+<html lang="es">
 
-      <main class="contacto_main">
+<head>
+  <title>Hasta La Madeja | Trabajos Artesanales Para Vos | Contacto</title>
+  <link rel="shortcut icon" href="img/logo2.ico" type="image/x-icon">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Ms+Madi&family=Roboto&display=swap"
+    rel="stylesheet">
+  <meta charset="UTF-8>">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Hasta la madeja. Trabajos artesanales para vos. Sección contacto">
+  <meta name="keywords"
+    content="Contacto, Hasta, Hasta La, Hasta La Madeja, Crochet, Amigurumis, Accesorios, Accesorios Para Bebés, Llaveros, Mándalas, Lana, Ovillo, Tejido, Handmade, Artesano, Artesanal, Hecho A Mano, Feria, Muñeco">
+  <meta property="og:type" content="Web site">
+  <meta property="og:title" content="Hasta La Madeja | Trabajos Artesanales Para Vos | Contacto">
+  <meta property="og:url" content="https://juan-cruz-liboreiro-justel.github.io/Hasta-la-madeja/contacto.html">
+  <meta property="og:image" content="https://juan-cruz-liboreiro-justel.github.io/Hasta-la-madeja/img/logo2.png">
+</head>
 
-        <!-- TITULO PAGINA -->
+<body>
+  <!-- BARRA DE NAVEGACION -->
+  <nav id="home" class="navbar navbar-expand-lg navbar-menu">
+    <div class="container">
+      <a class="navbar-brand" href="index.html"><img src="img/logo2.png" alt="Logo" class="logo"></a>
+      <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse"
+        data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+        aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse menu" id="navbarNavAltMarkup">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">INICIO</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="galeria.html">GALERIA</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="nosotros.html">NOSOTROS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contacto.html">CONTACTO</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="clientes.html">CLIENTES</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-        <h1 class="container text-center contacto_titulo">COMUNICATE CON NOSOTROS</h1>
+  <main class="contacto_main">
+
+    <!-- TITULO PAGINA -->
+
+    <h1 class="container text-center contacto_titulo">COMUNICATE CON NOSOTROS</h1>
 
 
-        <!-- FORMULARIO -->
+    <!-- FORMULARIO -->
 
-        <section class="contacto">
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-6 mx-auto">
-                <div class="card formulario">
-                  <div class="card-body  formulario">
-                    <div class="form p-3">
-                      <div class="form-row pb-4">
-                        <div class="col-lg-12">
-                          <input type="text" class="efecto_1" placeholder="Nombre">
-                        </div>
-                      </div>
-                      <div class="form-row pb-4">
-                        <div class="col-lg-12">
-                          <input type="text" class="efecto_1" placeholder="Apellido">
-                        </div>
-                      </div>
-                      <div class="form-row pb-4">
-                        <div class="col-lg-12">
-                          <input type="email" class="efecto_1" placeholder="Email">
-                        </div>
-                      </div>
-                      <div class="form-row pt-5">
-                        <div class="col-lg-12">
-                          <textarea class="efecto_1" col="30" row="10" placeholder="Dejanos tu mensaje..."></textarea>
-                        </div>
-                      </div>
-                      <div class="form-row pt-4">
-                        <div class="col-lg-12">
-                          <button class="btn_1">ENVIAR</button>
-                        </div>
-                      </div>
+    <section class="contacto">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 mx-auto">
+            <div class="card formulario">
+              <div class="card-body  formulario">
+                <div class="form p-3">
+                  <div class="form-row pb-4">
+                    <div class="col-lg-12">
+                      <input type="text" class="efecto_1" placeholder="Nombre">
+                    </div>
+                  </div>
+                  <div class="form-row pb-4">
+                    <div class="col-lg-12">
+                      <input type="text" class="efecto_1" placeholder="Apellido">
+                    </div>
+                  </div>
+                  <div class="form-row pb-4">
+                    <div class="col-lg-12">
+                      <input type="email" class="efecto_1" placeholder="Email">
+                    </div>
+                  </div>
+                  <div class="form-row pt-5">
+                    <div class="col-lg-12">
+                      <textarea class="efecto_1" col="30" row="10" placeholder="Dejanos tu mensaje..."></textarea>
+                    </div>
+                  </div>
+                  <div class="form-row pt-4">
+                    <div class="col-lg-12">
+                      <button class="btn_1">ENVIAR</button>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-        </section>
-
-
-        <!-- MENSAJE AL CLIENTE -->
-
-        <p class="container text-center contacto_respuesta">Dejanos tu mensaje y te respondemos en menos de 24hs.</p>
-
-      </main>
-
-      <!-- BOTON VOLVER A ARRIBA -->
-
-      <div class="btn_arriba">
-        <a href="#home"><img src="img/go_up2.png" alt="Ir arriba"></a>
-      </div>
-
-
-
-
-      <!-- PIE DE PAGINA -->
-      <footer>
-        <div class="container">
-            <div class="row">
-            <div class="col-lg-6 col-sm-12 text-center footer__txt">
-                <p>© Hasta La Madeja 2022. All Rights Reserved.</p>
-            </div>
-            <div class="col-lg-6 col-sm-12 text-center footer__redes redes"> 
-                    <a href="https://www.instagram.com/hasta.la.madeja/" target="_blank"><img src="img/instagram.png" alt=""Instagram class="instagram icono_footer"></a>
-                    <a href="https://www.tiktok.com/@hasta.la.madeja?lang=es" target="_blank"><img src="img/tiktok.png" alt="Tiktok" class="tiktok icono_footer"></a>
-                    <a href="https://api.whatsapp.com/send/?phone=5491123895860&text&type=phone_numbre&app_absent=0" target="_blank"><img src="img/whatsapp.png" alt="Whatsapp"  class="whatsapp icono_footer"></a>
-            </div>
-            <div class="col-lg-12 col-sm-12 text-center footer__txt">
-                <p>Design by <a href="https://www.linkedin.com/in/juan-cruz-liboreiro-justel/" target="_blank">JUAN CRUZ LIBOREIRO</a> - 2022</p>
-            </div>
-            </div>
         </div>
-      </footer>
+      </div>
+    </section>
 
-      <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-      <script>
-        AOS.init();
-      </script>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 
-    </body>
-  </html> 
+    <!-- MENSAJE AL CLIENTE -->
+
+    <p class="container text-center contacto_respuesta">Dejanos tu mensaje y te respondemos en menos de 24hs.</p>
+
+  </main>
+
+  <!-- BOTON VOLVER A ARRIBA -->
+
+  <div class="btn_arriba">
+    <a href="#home"><img src="img/go_up2.png" alt="Ir arriba"></a>
+  </div>
+
+
+
+
+  <!-- PIE DE PAGINA -->
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 col-sm-12 text-center footer__txt">
+          <p>© Hasta La Madeja 2022. All Rights Reserved.</p>
+        </div>
+        <div class="col-lg-6 col-sm-12 text-center footer__redes redes">
+          <a href="https://www.instagram.com/hasta.la.madeja/" target="_blank"><img src="img/instagram.png"
+              alt="Instagram" class="instagram icono_footer"></a>
+          <a href="https://www.tiktok.com/@hasta.la.madeja?lang=es" target="_blank"><img src="img/tiktok.png"
+              alt="Tiktok" class="tiktok icono_footer"></a>
+          <a href="https://api.whatsapp.com/send/?phone=5491123895860&text&type=phone_numbre&app_absent=0"
+            target="_blank"><img src="img/whatsapp.png" alt="Whatsapp" class="whatsapp icono_footer"></a>
+        </div>
+        <div class="col-lg-12 col-sm-12 text-center footer__txt">
+          <p>Design by <a href="https://www.linkedin.com/in/juan-cruz-liboreiro-justel/" target="_blank">JUAN CRUZ
+              LIBOREIRO</a> - 2022</p>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+    crossorigin="anonymous"></script>
+
+</body>
+
+</html>
