--- a/nosotros.html
+++ b/nosotros.html
@@ -1,140 +1,174 @@
 <!DOCTYPE html>
-  <html lang="es">
-    <head>
-      <title>Hasta La Madeja</title>
-      <link rel="shortcut icon" href="img/logo2.png">
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-      <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-      <link rel="stylesheet" href="css/style.css">
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Ms+Madi&family=Roboto&display=swap" rel="stylesheet">
-      <meta charset="UTF-8>">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-      <!-- BARRA DE NAVEGACION -->
-      <nav id="home" class="navbar navbar-expand-lg navbar-menu">
-        <div class="container">
-          <a class="navbar-brand" href="index.html"><img src="img/logo2.png" alt="Logo" class="logo"></a>
-          <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse menu" id="navbarNavAltMarkup">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="index.html">HOME</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="galeria.html">GALERIA</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="nosotros.html">NOSOTROS</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contacto.html">CONTACTO</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="clientes.html">CLIENTES</a>
-              </li>
-            </ul>
+<html lang="es">
+
+<head>
+  <title>Hasta La Madeja | Trabajos Artesanales Para Vos | Nosotros</title>
+  <link rel="shortcut icon" href="img/logo2.ico" type="image/x-icon">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Ms+Madi&family=Roboto&display=swap"
+    rel="stylesheet">
+  <meta charset="UTF-8>">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Hasta la madeja. Trabajos artesanales para vos. Sección nosotros">
+  <meta name="keywords"
+    content="Nosotros, Hasta, Hasta La, Hasta La Madeja, Crochet, Amigurumis, Accesorios, Accesorios Para Bebés, Llaveros, Mándalas, Lana, Ovillo, Tejido, Handmade, Artesano, Artesanal, Hecho A Mano, Feria, Muñeco">
+  <meta property="og:type" content="Web site">
+  <meta property="og:title" content="Hasta La Madeja | Trabajos Artesanales Para Vos | Nosotros">
+  <meta property="og:url" content="https://juan-cruz-liboreiro-justel.github.io/Hasta-la-madeja/nosotros.html">
+  <meta property="og:image" content="https://juan-cruz-liboreiro-justel.github.io/Hasta-la-madeja/img/logo2.png">
+</head>
+
+<body>
+  <!-- BARRA DE NAVEGACION -->
+  <nav id="home" class="navbar navbar-expand-lg navbar-menu">
+    <div class="container">
+      <a class="navbar-brand" href="index.html"><img src="img/logo2.png" alt="Logo" class="logo"></a>
+      <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse"
+        data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+        aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse menu" id="navbarNavAltMarkup">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">INICIO</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="galeria.html">GALERIA</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="nosotros.html">NOSOTROS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contacto.html">CONTACTO</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="clientes.html">CLIENTES</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- MAIN -->
+  <main>
+    <div class="container nosotros">
+      <div class="row">
+        <div class="col text-center">
+          <h1 class="nosotros_titulo">ACERCA DE NOSOTROS</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col polaroid">
+          <img src="img/img7.2.png" alt="Portada groru star wars" class="nosotros_portada_img">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-6 col-sm-12">
+          <div class="row">
+            <div class="col-12">
+              <div class="nosotros_texto">
+                <p>Se dice que el crochet (o ganchillo) se convirtió en una próspera “industria casera” (especialmente
+                  en Irlanda y el Norte de Francia), sosteniendo comunidades cuyo modo de vida fue dañado por las
+                  guerras y las malas cosechas.</p>
+              </div>
+              <div class="polaroid">
+                <img src="img/img3.png" alt="corazon rojo">
+              </div>
+              <div class="nosotros_texto">
+                <p>Los muñecos tejidos a crochet nacen en Japón a partir de los años 50, cuando la cultura japonesa se
+                  dirigió a lo cute o kawaii. Al finalizar la Segunda Guerra Mundial, un Japón derrotado y desanimado
+                  necesitaba algo que ayudara a hacer más placentero el paso de las horas, así es que abuelas y tías
+                  comenzaron a tejer gran variedad de muñecos, como una forma de entretenerse y entretener a los niños
+                  en medio del sombrío clima reinante.</p>
+              </div>
+              <div class="polaroid">
+                <img src="img/img28.png" alt="sonajero jirafa">
+              </div>
+              <div class="nosotros_texto">
+                <p>El tejido a mano ha pasado de generación en generación convirtiéndose en un pasatiempo útil y
+                  estimulando el espíritu creativo de millones de pueblos a través de los tiempos. El tejido de punto
+                  sigue ocupando los primeros puestos de la moda y acaparando la atención de millones de mujeres en todo
+                  el mundo. Pero tejer a mano no es solo pasar hilos de una aguja a otra, hacer este tipo de tejido es
+                  también todo un desafío y sobre todo crear algo único.</p>
+              </div>
+            </div>
           </div>
         </div>
-      </nav>
-
-      <!-- MAIN -->
-      <main>
-        <div class="container nosotros">
-            <div class="row">
-              <div class="col text-center">
-                <h1 class="nosotros_titulo">ACERCA DE NOSOTROS</h1>
+        <div class="col-lg-6 col-sm-12">
+          <div class="row">
+            <div class="col-12">
+              <div class="polaroid">
+                <img src="img/img12.jpeg" alt="amigurumi para bebe celeste">
+              </div>
+              <div class="nosotros_texto">
+                <p>Esta técnica de tejido para mí es la más romántica de todas. Las prendas tejidas a crochet son
+                  inigualables. Es ideal para prendas de bebés, pero en prendas femeninas tampoco tiene comparación.</p>
+              </div>
+              <div class="polaroid">
+                <img src="img/img16.jpeg" alt="cartel nombre catalina con borlas">
+              </div>
+              <div class="nosotros_texto">
+                <p>El muñeco tradicional tenía cabeza grande y cuerpo pequeño, y se utilizaban como llavero. Los niños
+                  llevaban sus amigurumis en sus mochilas. Sin embargo en este lado del mundo, se hicieron conocidos
+                  hace algunos años. Su simpática estética y su infinita posibilidad de diseño, hacen que funcionen
+                  tanto como un juguete tejido como para posicionarse como un objeto decorativo.</p>
+              </div>
+              <div class="polaroid">
+                <img src="img/img10.jpeg" alt="conitos de helado coloridos">
               </div>
             </div>
-            <div class="row">
-              <div class="col polaroid">
-                <img src="img/img7.2.png" alt="Portada" class="nosotros_portada_img">
-              </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-6 col-sm-12">
-                    <div class="row">
-                        <div class="col-12">
-                            <div class="nosotros_texto">
-                                <p>Se dice que el crochet (o ganchillo) se convirtió en una próspera “industria casera” (especialmente en Irlanda y el Norte de Francia), sosteniendo comunidades cuyo modo de vida fue dañado por las guerras y las malas cosechas.</p>
-                              </div>
-                              <div class="polaroid">
-                                <img src="img/img3.png" alt="Imagen">
-                              </div>
-                              <div class="nosotros_texto">
-                                <p>Los muñecos tejidos a crochet nacen en Japón a partir de los años 50, cuando la cultura japonesa se dirigió a lo cute o kawaii. Al finalizar la Segunda Guerra Mundial, un Japón derrotado y desanimado necesitaba algo que ayudara a hacer más placentero el paso de las horas, así es que abuelas y tías comenzaron a tejer gran variedad de muñecos, como una forma de entretenerse y entretener a los niños en medio del sombrío clima reinante.</p>
-                              </div>
-                              <div class="polaroid">
-                                <img src="img/img28.png" alt="Imagen">
-                              </div>
-                              <div class="nosotros_texto">
-                                <p>El tejido a mano ha pasado de generación en generación convirtiéndose en un pasatiempo útil y estimulando el espíritu creativo de millones de pueblos a través de los tiempos. El tejido de punto sigue ocupando los primeros puestos de la moda y acaparando la atención de millones de mujeres en todo el mundo. Pero tejer a mano no es solo pasar hilos de una aguja a otra, hacer este tipo de tejido es también todo un desafío y sobre todo crear algo único.</p>
-                              </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-sm-12">
-                    <div class="row">
-                        <div class="col-12">
-                            <div class="polaroid">
-                                <img src="img/img12.jpeg" alt="Imagen">
-                              </div>
-                              <div class="nosotros_texto">
-                                <p>Esta técnica de tejido para mí es la más romántica de todas. Las prendas tejidas a crochet son inigualables. Es ideal para prendas de bebés, pero en prendas femeninas tampoco tiene comparación.</p>
-                              </div>
-                              <div class="polaroid">
-                                <img src="img/img16.jpeg" alt="Imagen">
-                              </div>
-                              <div class="nosotros_texto">
-                                <p>El muñeco tradicional tenía cabeza grande y cuerpo pequeño, y se utilizaban como llavero. Los niños llevaban sus amigurumis en sus mochilas. Sin embargo en este lado del mundo, se hicieron conocidos hace algunos años. Su simpática estética y su infinita posibilidad de diseño, hacen que funcionen tanto como un juguete tejido como para posicionarse como un objeto decorativo.</p>
-                              </div>
-                              <div class="polaroid">
-                                <img src="img/img10.jpeg" alt="Imagen">
-                              </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+          </div>
         </div>
-    </main>
-
-      <!-- BOTON VOLVER A ARRIBA -->
-
-      <div class="btn_arriba">
-        <a href="#home"><img src="img/go_up2.png" alt="Ir arriba"></a>
       </div>
+    </div>
+  </main>
+
+  <!-- BOTON VOLVER A ARRIBA -->
+
+  <div class="btn_arriba">
+    <a href="#home"><img src="img/go_up2.png" alt="Ir arriba"></a>
+  </div>
 
 
 
 
-      <!-- PIE DE PAGINA -->
-      <footer>
-        <div class="container">
-            <div class="row">
-            <div class="col-lg-6 col-sm-12 text-center footer__txt">
-                <p>© Hasta La Madeja 2022. All Rights Reserved.</p>
-            </div>
-            <div class="col-lg-6 col-sm-12 text-center footer__redes redes"> 
-                    <a href="https://www.instagram.com/hasta.la.madeja/" target="_blank"><img src="img/instagram.png" alt=""Instagram class="instagram icono_footer"></a>
-                    <a href="https://www.tiktok.com/@hasta.la.madeja?lang=es" target="_blank"><img src="img/tiktok.png" alt="Tiktok" class="tiktok icono_footer"></a>
-                    <a href="https://api.whatsapp.com/send/?phone=5491123895860&text&type=phone_numbre&app_absent=0" target="_blank"><img src="img/whatsapp.png" alt="Whatsapp"  class="whatsapp icono_footer"></a>
-            </div>
-            <div class="col-lg-12 col-sm-12 text-center footer__txt">
-                <p>Design by <a href="https://www.linkedin.com/in/juan-cruz-liboreiro-justel/" target="_blank">JUAN CRUZ LIBOREIRO</a> - 2022</p>
-            </div>
-            </div>
+  <!-- PIE DE PAGINA -->
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 col-sm-12 text-center footer__txt">
+          <p>© Hasta La Madeja 2022. All Rights Reserved.</p>
         </div>
-      </footer>
+        <div class="col-lg-6 col-sm-12 text-center footer__redes redes">
+          <a href="https://www.instagram.com/hasta.la.madeja/" target="_blank"><img src="img/instagram.png"
+              alt="Instagram" class="instagram icono_footer"></a>
+          <a href="https://www.tiktok.com/@hasta.la.madeja?lang=es" target="_blank"><img src="img/tiktok.png"
+              alt="Tiktok" class="tiktok icono_footer"></a>
+          <a href="https://api.whatsapp.com/send/?phone=5491123895860&text&type=phone_numbre&app_absent=0"
+            target="_blank"><img src="img/whatsapp.png" alt="Whatsapp" class="whatsapp icono_footer"></a>
+        </div>
+        <div class="col-lg-12 col-sm-12 text-center footer__txt">
+          <p>Design by <a href="https://www.linkedin.com/in/juan-cruz-liboreiro-justel/" target="_blank">JUAN CRUZ
+              LIBOREIRO</a> - 2022</p>
+        </div>
+      </div>
+    </div>
+  </footer>
 
-      <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-      <script>
-        AOS.init();
-      </script>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+    crossorigin="anonymous"></script>
 
-    </body>
-  </html> 
+</body>
+
+</html>
