categoras-index / portada-nosotros

--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
     <!-- CATEGORIAS-->
     <section class="categorias" data-aos="fade-up" data-aos-duration="3000">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-4 col-md-12 col-sm-12">
+            <div class="row justify-content-center">
+                <div class="col-lg-4 col-md-8 col-sm-12">
                     <div class="categorias__carousel polaroid">
                         <div id="carousel-3" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
@@ -163,7 +163,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-12 col-sm-12">
+                <div class="col-lg-4 col-md-8 col-sm-12">
                     <div class="categorias__carousel polaroid">
                         <div id="carousel-4" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
@@ -194,7 +194,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-12 col-sm-12">
+                <div class="col-lg-4 col-md-8 col-sm-12">
                     <div class="categorias__carousel polaroid">
                         <div id="carousel-5" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
