--- a/nosotros.html
+++ b/nosotros.html
@@ -64,7 +64,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col polaroid">
+        <div class="col polaroid nosotros_portada">
           <img src="img/img7.2.png" alt="Portada groru star wars" class="nosotros_portada_img">
         </div>
       </div>
